Fix ConsoleReader and Jeu